# yt-transcribe

./: .gitignore  LICENSE  Makefile  PUBLICATION_CHECKLIST.md  SECURITY.md  agents.md  config.toml.example  prompt.md  pyproject.toml  quick.sh  readme.md
src/yt_transcribe/: __init__.py  codex_summarizer.py  config.py  email_sender.py  llm_summarizer.py  main.py  privatebin_uploader.py  telegram_sender.py
